add getById method